# django-nonlinear

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENCE  MANIFEST.in  README.md  docker-compose.yml  setup.cfg
.github/workflows/: django.yml
nonlinear/: admin.py  apps.py  export_import.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
nonlinear/management/commands/: nonlinear_add_task.py  nonlinear_dump.py  nonlinear_test_data.py
nonlinear/migrations/: 0001_initial.py  _create_group.py
nonlinear/static/: download.sh
nonlinear/templates/nonlinear/: base.html
nonlinear/templates/nonlinear/cbv/: confirm.html  form.html  list.html
nonlinear/templates/nonlinear/components/: activities.html  comments.html  sub_tasks.html  task_list.html
nonlinear/templates/nonlinear/workspace/: task_edit.html  workspace.html
sample_project/: requirements.txt
sample_project/config/: settings.py  urls.py
