[metadata]
name = django-nonlinear
version = 0.1
author = Fxadecimal
author_email = fxadecimal@users.noreply.github.com
description = Manage your Django Project inside your Django Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fxadecimal/django-nonlinear
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    typing_extensions
    django-filter
    django-crispy-forms
    crispy-bootstrap5
    django-markdownify

[options.extras_require]
maintainer =
    zest.releaser[recommended]
    django
dev =
    tox==4.*
    black
    django


[options.packages.find]
exclude =
    tests
    docs